[project]
name = "kraken-portfolio-rebalancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ccxt>=4.5.52",
    "fastapi>=0.136.1",
    "filelock>=3.29.0",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "oauth2client>=4.1.3",
    "pandas>=3.0.2",
    "python-telegram-bot[webhooks]>=22.7",
    "uvicorn>=0.46.0",
]
